--- a/public/file/index.html
+++ b/public/file/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PDF Viewer</title>
-</head>
-<body>
-
-<iframe src="http://localhost/bem/public/file/BOOKLET%20NYALA%20ASA%20NEW.pdf" width="100%" height="600px"></iframe>
-
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>PDF Viewer</title>
+	</head>
+	<body>
+		<iframe
+			src="http://localhost/HIMA-TE/public/file/BOOKLET%20NYALA%20ASA%20NEW.pdf"
+			width="100%"
+			height="600px"
+		></iframe>
+	</body>
 </html>
